--- a/android/res/values-de/strings.xml
+++ b/android/res/values-de/strings.xml
@@ -433,7 +433,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Verfügbar</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">In der Warteschlange</string>
+	<string name="downloader_queued">in der Warteschlange</string>
 	<string name="downloader_near_me_subtitle">In meiner Nähe</string>
 	<string name="downloader_status_maps">Karten</string>
 	<string name="downloader_download_all_button">Alle herunterladen</string>
