--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -419,7 +419,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Saatavilla</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">Jonossa</string>
+	<string name="downloader_queued">jonossa</string>
 	<string name="downloader_near_me_subtitle">Lähelläni</string>
 	<string name="downloader_status_maps">Kartat</string>
 	<string name="downloader_download_all_button">Lataa kaikki</string>
