--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -419,7 +419,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Tilgjengelig</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">Lagt i kø</string>
+	<string name="downloader_queued">lagt i kø</string>
 	<string name="downloader_near_me_subtitle">I nærheten</string>
 	<string name="downloader_status_maps">Kart</string>
 	<string name="downloader_download_all_button">Last ned alle</string>
