--- a/android/res/values-vi/strings.xml
+++ b/android/res/values-vi/strings.xml
@@ -419,7 +419,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Đã có</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">Đã xếp hàng chờ</string>
+	<string name="downloader_queued">đã xếp hàng chờ</string>
 	<string name="downloader_near_me_subtitle">Gần tôi</string>
 	<string name="downloader_status_maps">Bản đồ</string>
 	<string name="downloader_download_all_button">Tải xuống tất cả</string>
