--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -681,7 +681,7 @@
 "downloader_available_maps" = "Tilgjengelig";
 
 /* Country queued for download */
-"downloader_queued" = "Lagt i kø";
+"downloader_queued" = "lagt i kø";
 
 "downloader_near_me_subtitle" = "I nærheten";
 
@@ -1867,6 +1867,10 @@
 "whatsnew_waypoints_title" = "Rutepunkter";
 
 "whatsnew_waypoints_message" = "Trykk på steder for å legge til rutepunkter.";
+
+"whatsnew_viator_title" = "Viator title";
+
+"whatsnew_viator_message" = "Viator message";
 
 "whatsnew_driving_style_title" = "Ny kartstil for bruk under kjøring";
 
