--- a/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
@@ -1868,6 +1868,10 @@
 
 "whatsnew_waypoints_message" = "Toque nos locais para adicionar pontos de caminho à sua rota.";
 
+"whatsnew_viator_title" = "Viator title";
+
+"whatsnew_viator_message" = "Viator message";
+
 "whatsnew_driving_style_title" = "Novo estilo de mapa para a condução";
 
 "whatsnew_driving_style_message" = "O modo de navegação do carro ficou mais fácil de utilizar.";
