--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1000,6 +1000,7 @@
 	<string name="taxi_wait">Expected in %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Couldn\'t find a taxi nearby</string>
+	<string name="taxi_no_provider">Couldn\'t find a taxi provider nearby</string>
 	<string name="install_app">Install</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filter</string>
