[android] Added stub string for IntermdediateNotFound dialog

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -600,6 +600,8 @@
 	<string name="dialog_routing_start_not_determined">Route was not created. Unable to locate starting point.</string>
 	<string name="dialog_routing_select_closer_start">Please select a starting point closer to a road.</string>
 	<string name="dialog_routing_change_end">Adjust destination</string>
+	<string name="dialog_routing_change_intermediate">Adjust intermediate point</string>
+	<string name="dialog_routing_intermediate_not_determined">Route was not created. Unable to locate the intermediate point.</string>
 	<string name="dialog_routing_end_not_determined">Route was not created. Unable to locate the destination.</string>
 	<string name="dialog_routing_select_closer_end">Please select a destination point located closer to a road.</string>
 	<string name="dialog_routing_system_error">System error</string>
